xalanj commit : fixing build.bat file, for xalan-java repos to support builds with Java 1.8